# advent_of_code_2021

./: Cargo.toml  LICENSE  README.md
day_01_puzzle_01/: Cargo.toml
day_01_puzzle_02/: Cargo.toml
day_02_puzzle_01/: Cargo.toml
day_02_puzzle_02/: Cargo.toml
day_03_puzzle_01/: Cargo.toml
day_03_puzzle_02/: Cargo.toml  string_loading_allocation_stats.json
day_04_puzzle_01/: Cargo.toml
day_04_puzzle_02/: Cargo.toml
day_05_puzzle_01/: Cargo.toml  comparisons.txt  correct_result.txt  intersections.txt  wrong_result.txt
day_05_puzzle_02/: Cargo.toml
day_06_puzzle_01/: Cargo.toml
day_07_puzzle_01/: Cargo.toml
day_07_puzzle_02/: Cargo.toml
day_08_puzzle_01/: Cargo.toml
day_08_puzzle_02/: Cargo.toml
day_09_puzzle_01/: Cargo.toml
day_09_puzzle_02/: Cargo.toml
day_10_puzzle_01/: Cargo.toml
day_10_puzzle_02/: Cargo.toml
day_11_puzzle_01/: Cargo.toml
day_11_puzzle_02/: Cargo.toml
day_12_puzzle_01/: Cargo.toml
day_12_puzzle_02/: Cargo.toml
day_13_puzzle_01/: Cargo.toml  invalid_output.txt  valid_output.txt
day_13_puzzle_02/: Cargo.toml
day_14_puzzle_01/: Cargo.toml
day_14_puzzle_02/: Cargo.toml
day_15_puzzle_01/: Cargo.toml
day_15_puzzle_02/: Cargo.toml
day_16_puzzle_01/: Cargo.toml
day_16_puzzle_02/: Cargo.toml
day_17_puzzle_01/: Cargo.toml
day_17_puzzle_02/: Cargo.toml
day_18_puzzle_01/: Cargo.toml
day_19_puzzle_01/: Cargo.toml
day_20_puzzle_01/: Cargo.toml
day_20_puzzle_02/: Cargo.toml
day_21_puzzle_01/: Cargo.toml
day_21_puzzle_02/: Cargo.toml
day_22_puzzle_01/: Cargo.toml
day_22_puzzle_02/: Cargo.toml
(+107 files in other folders)
