[workspace]
members = [
    "day_01_puzzle_01",
    "day_01_puzzle_02",
    "day_02_puzzle_01",
    "day_02_puzzle_02",
    "day_03_puzzle_01",
    "day_03_puzzle_02",
    "day_04_puzzle_01",
    "day_04_puzzle_02",
    "day_05_puzzle_01",
    "day_05_puzzle_02",
    "day_06_puzzle_01",
    "day_07_puzzle_01",
    "day_07_puzzle_02",
    "day_08_puzzle_01",
    "day_08_puzzle_02",
    "day_09_puzzle_01",
    "day_09_puzzle_02",
    "day_10_puzzle_01",
]