[workspace]
members = [
    "day_01_puzzle_01",
    "day_01_puzzle_02",
    "day_02_puzzle_01",
    "day_02_puzzle_02",
    "day_03_puzzle_01",
    "day_03_puzzle_02",
    "day_04_puzzle_01",
    "day_04_puzzle_02",
    "day_05_puzzle_01",
    "day_05_puzzle_02",
    "day_06_puzzle_01",
    "day_07_puzzle_01",
    "day_07_puzzle_02",
    "day_08_puzzle_01",
    "day_08_puzzle_02",
    "day_09_puzzle_01",
    "day_09_puzzle_02",
    "day_10_puzzle_01",
    "day_10_puzzle_02",
    "day_11_puzzle_01",
    "day_11_puzzle_02",
    "day_12_puzzle_01",
    "day_12_puzzle_02",
    "day_13_puzzle_01",
    "day_13_puzzle_02",
    "day_14_puzzle_01",
    "day_14_puzzle_02",
    "day_15_puzzle_01",
    "day_15_puzzle_02",
    "day_16_puzzle_01",
    "day_16_puzzle_02",
    "day_17_puzzle_01",
    "day_17_puzzle_02",
    "day_20_puzzle_01",
    "day_20_puzzle_02",
    "day_22_puzzle_01",
    "day_22_puzzle_02",
]